--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <div class="form-box">
                     <label for="email">Email</label>
                     <input type="text" name="email" id="email" placeholder="info@gmail.com">
-                    <small class="error-text">Introducir email</small>
+                    <small class="error-text">Introducir email valido</small>
                 </div>
                 <div class="form-box">
                     <label for="password">Contraseña</label>
                     <input type="text" name="password" id="password" placeholder="password">
-                    <small class="error-text">Introducir contraseña</small>
+                    <small class="error-text">Introducir contraseña de +6 caracteres</small>
                 </div>
                 <button type="submit" id="submit-btn" disabled>Enviar</button>
             </form>
